# opencodecommit

./: .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  PROCESS.md  README.md  ROADMAP.md  SECURITY.md  SENSITIVE.md  action.yml  biome.json  handover-e2e.md  package.json
.claude/: settings.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  (+3 more)
crates/opencodecommit/: Cargo.toml
crates/opencodecommit/src/: actions.rs  backend.rs  codex_home.rs  config.rs  context.rs  dispatch.rs  e2e_trace.rs  git.rs  guard.rs  languages.rs  lib.rs  main.rs  prompt.rs  response.rs  scan.rs  sensitive.rs  tui.rs  update.rs
crates/opencodecommit/src/api/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai_compatible.rs
crates/opencodecommit/tests/: e2e_cli.rs  e2e_codex_perf.rs  e2e_tui.rs
crates/opencodecommit/tests/common/: mod.rs
docs/: architecture.md  backends.md  ci-scan.md  codex-occ-cold-start-comparison.md  config.md  process-flow.md  roadmap.md  vscode-vscodium.md
extension/: .vscodeignore  package.json  tsconfig.json  tsconfig.wdio.json  wdio.conf.ts
scripts/: check-package-age.mjs  check_model_updates.sh  dev-cli.sh  dev-extension.sh  dev-install.sh  dev-tui.sh  e2e-common.sh  e2e-preflight.sh  model_defaults.json  publish.sh  sync-version.sh  test-backend-local.sh  test-dev-local-e2e.sh  test-e2e.sh  test-live-backends.sh  test-staging-full-e2e.sh
test-fixtures/: commit-formatting.json  sensitive-scenarios.json
(+46 files in other folders)
