[package]
name = "opencodecommit"
version = "1.3.0"
edition = "2024"
rust-version = "1.94"
description = "AI-powered git commit message generator that delegates to terminal AI agents"
license = "MIT"
repository = "https://github.com/Nevaberry/opencodecommit"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[lib]
name = "opencodecommit"
path = "src/lib.rs"

[[bin]]
name = "occ"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

[features]
default = ["cli"]
cli = ["dep:clap"]
